fix for IE screenshots collapsing

--- a/2017/assets/sass/_components.scss
+++ b/2017/assets/sass/_components.scss
@@ -625,6 +625,10 @@ aside {
   }
 }
 
+html.-ms- .screenshot--framed {
+  height: 1px;
+}
+
 html.-ms- .screenshot--framed svg { 
   display: none;
 }
